# mpu6050

./: CMakeLists.txt  package.xml
include/mpu6050/: MPU6050_6Axis_MotionApps20.h
launch/: imu.launch
src/: demo_dmp.cpp
